--- a/index.html
+++ b/index.html
@@ -8,46 +8,46 @@
 </head>
 
 <body>
-  <div class="aaa">
+  <div class="header">
     <img src="./eisenhower-matrix.jpg">
-    <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+    <a class="header-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </div>
-  <div class="centered-main-page-element">
-    <p id="topSectionForAddingElementToList">
+  <div class="wrapper">
+    <p class='section-heading'>
       <label for="new-task">Add Item</label>
-    <div class="task-row-wrapper">
+    <div class="task-container">
       <input id="new-task" class="task" type="text">
       <button>Add</button>
     </div>
     </p>
-    <h3>Todo</h3>
-    <ul id="incompleteTasks">
+    <h3 class='section-heading'>Todo</h3>
+    <ul class="todo-tasks">
       <li>
         <input type="checkbox">
         <label class="task">Pay Bills</label>
         <input type="text" class="task">
-        <button class="edit">Edit</button>
-        <button class="delete">
+        <button class="btn_edit">Edit</button>
+        <button class="btn_delete">
           <img src="./remove.svg">
         </button>
       </li>
-      <li class="editMode">
+      <li>
         <input type="checkbox">
         <label class="task">Go Shopping</label>
         <input type="text" value="Go Shopping" class="task">
-        <button class="edit">Save</button>
-        <button class="delete">
+        <button class="btn_edit">Edit</button>
+        <button class="btn_delete">
           <img src="./remove.svg"></button>
       </li>
     </ul>
-    <h3>Completed</h3>
+    <h3 class='section-heading'>Completed</h3>
     <ul id="completed-tasks">
       <li>
         <input type="checkbox" checked>
         <label class="task">See the Doctor</label>
         <input type="text" class="task">
-        <button class="edit">Edit</button>
-        <button class="delete">
+        <button class="btn_edit">Edit</button>
+        <button class="btn_delete">
           <img src="./remove.svg">
         </button>
       </li>
