--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
     </p>
     <h3 class='section-heading'>Todo</h3>
-    <ul class="todo-tasks">
+    <ul class="tasks_todo">
       <li>
         <input type="checkbox">
         <label class="task">Pay Bills</label>
@@ -41,7 +41,7 @@
       </li>
     </ul>
     <h3 class='section-heading'>Completed</h3>
-    <ul id="completed-tasks">
+    <ul id="tasks_done">
       <li>
         <input type="checkbox" checked>
         <label class="task">See the Doctor</label>
