--- a/index.html
+++ b/index.html
@@ -7,48 +7,46 @@
   <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
 </head>
 
-<body>
+<body class="body">
   <div class="header">
     <img src="./eisenhower-matrix.jpg">
     <a class="header-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </div>
   <div class="wrapper">
-    <p class='section-heading'>
-      <label for="new-task">Add Item</label>
+    <h3 class="section-heading new">Add Item</h3>
     <div class="task-container">
-      <input id="new-task" class="task" type="text">
-      <button>Add</button>
+      <input id="new-task" class="task input_new-item" type="text">
+      <button class="btn">Add</button>
     </div>
-    </p>
-    <h3 class='section-heading'>Todo</h3>
-    <ul class="tasks_todo">
-      <li>
-        <input type="checkbox">
-        <label class="task">Pay Bills</label>
-        <input type="text" class="task">
-        <button class="btn_edit">Edit</button>
-        <button class="btn_delete">
-          <img src="./remove.svg">
+    <h3 class="section-heading">Todo</h3>
+    <ul class="list tasks_todo">
+      <li class="list__item" class="list__item">
+        <input class="input_check" type="checkbox">
+        <label class="label task">Pay Bills</label>
+        <input type="text" class="task input_text">
+        <button class="btn btn_edit">Edit</button>
+        <button class="btn btn_delete">
+          <img class="delete-img" src="./remove.svg">
         </button>
       </li>
-      <li>
-        <input type="checkbox">
-        <label class="task">Go Shopping</label>
-        <input type="text" value="Go Shopping" class="task">
-        <button class="btn_edit">Edit</button>
-        <button class="btn_delete">
-          <img src="./remove.svg"></button>
+      <li class="list__item">
+        <input class="input_check" type="checkbox">
+        <label class="label task">Go Shopping</label>
+        <input type="text" value="Go Shopping" class="task input_text">
+        <button class="btn btn_edit">Edit</button>
+        <button class="btn btn_delete">
+          <img class="delete-img" src="./remove.svg"></button>
       </li>
     </ul>
-    <h3 class='section-heading'>Completed</h3>
-    <ul id="tasks_done">
-      <li>
-        <input type="checkbox" checked>
-        <label class="task">See the Doctor</label>
-        <input type="text" class="task">
-        <button class="btn_edit">Edit</button>
-        <button class="btn_delete">
-          <img src="./remove.svg">
+    <h3 class="section-heading">Completed</h3>
+    <ul class="list tasks_done">
+      <li class="list__item">
+        <input class="input_check" type="checkbox" checked>
+        <label class="label task">See the Doctor</label>
+        <input type="text" class="task input_text">
+        <button class="btn btn_edit">Edit</button>
+        <button class="btn btn_delete">
+          <img class="delete-img" src="./remove.svg">
         </button>
       </li>
     </ul>
