--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <title>Todo App</title>
+  <meta charset="utf-8">
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
-  <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
+  <link rel="stylesheet" href="style.css" media="screen">
 </head>
 
 <body class="body">
-  <div class="header">
-    <img src="./eisenhower-matrix.jpg">
+  <header class="header">
+    <img src="./eisenhower-matrix.jpg" alt="matrix image">
     <a class="header-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-  </div>
-  <div class="wrapper">
+  </header>
+  <section class="wrapper">
     <h3 class="section-heading new">Add Item</h3>
     <div class="task-container">
       <input id="new-task" class="task input_new-item" type="text">
@@ -20,13 +21,13 @@
     </div>
     <h3 class="section-heading">Todo</h3>
     <ul class="list tasks_todo">
-      <li class="list__item" class="list__item">
+      <li class="list__item">
         <input class="input_check" type="checkbox">
         <label class="label task">Pay Bills</label>
         <input type="text" class="task input_text">
         <button class="btn btn_edit">Edit</button>
         <button class="btn btn_delete">
-          <img class="delete-img" src="./remove.svg">
+          <img class="delete-img" src="./remove.svg" alt="delete icon">
         </button>
       </li>
       <li class="list__item">
@@ -35,7 +36,7 @@
         <input type="text" value="Go Shopping" class="task input_text">
         <button class="btn btn_edit">Edit</button>
         <button class="btn btn_delete">
-          <img class="delete-img" src="./remove.svg"></button>
+          <img class="delete-img" src="./remove.svg" alt="delete icon"></button>
       </li>
     </ul>
     <h3 class="section-heading">Completed</h3>
@@ -46,12 +47,12 @@
         <input type="text" class="task input_text">
         <button class="btn btn_edit">Edit</button>
         <button class="btn btn_delete">
-          <img class="delete-img" src="./remove.svg">
+          <img class="delete-img" src="./remove.svg" alt="delete icon">
         </button>
       </li>
     </ul>
-  </div>
-  <script type="text/javascript" src="app.js"></script>
+  </section>
+  <script src="app.js"></script>
 </body>
 
 </html>
