--- a/index.html
+++ b/index.html
@@ -14,40 +14,40 @@
     <a class="header-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </header>
   <section class="wrapper">
-    <h3 class="section-heading new">Add Item</h3>
+    <h3 class="section__heading">Add Item</h3>
     <div class="task-container">
-      <input id="new-task" class="task input_new-item" type="text">
+      <input id="task_new" class="input_new-item" type="text">
       <button class="btn">Add</button>
     </div>
-    <h3 class="section-heading">Todo</h3>
+    <h3 class="section__heading">Todo</h3>
     <ul class="list tasks_todo">
       <li class="list__item">
         <input class="input_check" type="checkbox">
-        <label class="label task">Pay Bills</label>
-        <input type="text" class="task input_text">
+        <label class="label">Pay Bills</label>
+        <input type="text" class="input_text">
         <button class="btn btn_edit">Edit</button>
         <button class="btn btn_delete">
-          <img class="delete-img" src="./remove.svg" alt="delete icon">
+          <img class="btn__icon" src="./remove.svg" alt="delete icon">
         </button>
       </li>
       <li class="list__item">
         <input class="input_check" type="checkbox">
-        <label class="label task">Go Shopping</label>
-        <input type="text" value="Go Shopping" class="task input_text">
+        <label class="label">Go Shopping</label>
+        <input type="text" value="Go Shopping" class="input_text">
         <button class="btn btn_edit">Edit</button>
         <button class="btn btn_delete">
-          <img class="delete-img" src="./remove.svg" alt="delete icon"></button>
+          <img class="btn__icon" src="./remove.svg" alt="delete icon"></button>
       </li>
     </ul>
-    <h3 class="section-heading">Completed</h3>
+    <h3 class="section__heading">Completed</h3>
     <ul class="list tasks_done">
       <li class="list__item">
         <input class="input_check" type="checkbox" checked>
-        <label class="label task">See the Doctor</label>
-        <input type="text" class="task input_text">
+        <label class="label">See the Doctor</label>
+        <input type="text" class="input_text">
         <button class="btn btn_edit">Edit</button>
         <button class="btn btn_delete">
-          <img class="delete-img" src="./remove.svg" alt="delete icon">
+          <img class="btn__icon" src="./remove.svg" alt="delete icon">
         </button>
       </li>
     </ul>
